# AOC_tools

./: .gitignore  .gitmodules  README.md
blender_addon/g1m_importer/: G1M_Exporter_plugin.py  G1M_classes.py  G1M_to_G1T_hashes.py  G1T_emm_lib.py  G1mImporter.py  G1t.py  KtidsKidsobs.py  __init__.py  blender_g1m.py  bones_botw.json  util.py
blender_addon/g1m_importer/g1m_exporter/: g1m_export_meshes.py  g1m_import_meshes.py  g1m_to_basic_gltf.py  lib_fmtibvb.py
blender_addon/g1m_importer/g1m_exporter/22bd644e/: 0.ib  0.vb  0.vgmap  1.fmt  1.ib  1.vb  1.vgmap  10.fmt  10.ib  10.vb  10.vgmap  11.ib  11.vb  11_drivermesh.fmt  11_drivermesh.ib  11_drivermesh.vb  11_transformed.vb  11_transformed.vgmap  12.fmt  12.ib  12.vb  12.vgmap  12_drivermesh.ib  12_drivermesh.vb  12_transformed.vb  13.vb  13_drivermesh.ib  13_drivermesh.vb  13_transformed.fmt  13_transformed.ib  13_transformed.vb  13_transformed.vgmap  14.ib  14.vb  14.vgmap  15.ib  15.vb  15.vgmap  16.ib  16.vb  (+43 more)
blender_addon/g1m_importer/g1m_exporter/clean/: 0cfa6923.g1m  6ecd9947.g1m
blender_addon/g1m_importer/g1m_exporter/tmp/: untitled.fmt  untitled.vb  untitled.vb0  untitled.vgmap  untitled1.fmt  untitled1.vb  untitled1.vb0
py/: Colorize.py  opacity_to_zero.py
py/G1T_emm_lib/: G1T_emm_lib.py
py/G1mSwap/: G1mSwap - Copy.py  G1mSwap.py  Ktid.py
py/G1tPy/: G1t.py  main.py
py/G1tPy/Dds_rs/: Cargo.toml  Dds_rs-0.1.0-cp312-none-win_amd64.whl
py/G1tPy/Dds_rs/src/: DdsFormatParser.rs  lib.rs
py/G1tPy/cpp/: 0cc1a2b4.g1t  DdsFile.cpp  G1t.py  G1tFile.cpp  G1tFile.h  G1tLib.h  Utils.cpp  Utils.h  bindings.cpp  g1t_module.cp312-win_amd64.pyd  g1t_module.cp39-win_amd64.pyd  json.cpp  log.txt  main.py  setup.py
py/G1tPy/cpp - Copy/: G1tLib.cpp  bindings.cpp  setup.py
py/G1tPy/cpp - Copy (2)/: 0cc1a2b4.g1t  0cc1a2b4_patched.g1t  DdsFile.h  G1t.py  G1tFile.cpp  G1tFile.h  G1tLib.cpp  Utils.h  bindings.cpp  g1t_module.cp312-win_amd64.pyd  main.py  make_gust.bat
py/G1tPy/cpp - Copy (2)/src/: g1t_module.cp312-win_amd64.exp
py/G1tPy/cpp - Copy (2)/tmp/: 0_rust.dds  vanila_g1t.json
py/G1tPy/cpp/test_g1t_data/: 0.dds  g1t.csv
py/G1tPy/cpp/tmp/: 0.dds  0cc1a2b4.g1t  modded_g1t.json  vanila_g1t.json
py/KidsObPy/: CharacterEditor.kidssingletondb  KidsOb.py  KidsOb_AI.py  cb3c8b15.kidssingletondb  tmp.json
py/KidsObPy/cpp/: AocKidsObjDBFile.cpp  AocKidsObjDBFile.h  bindings.cpp  setup.py
py/g1t_emm/: g1t_emm.py
rs/G1T_rs/: CMakeLists.txt  Cargo.toml  build.rs  clean_libs.bat  cmake_build.bat  wrapper.h
rs/G1T_rs/cpp/: G1tLib.cpp  G1tLib.h  Makefile — kopia  Makefilezxc
rs/G1T_rs/src/: bindings.rs  lib.rs
rs/G1tTestRs/: Cargo.toml
rs/G1tTestRs/src/: main.rs
src/: 00f86fb5.mtl  CMakeLists.txt  DdsFile.cpp  DdsFile.h  FilesOperations.cpp  FilesOperations.h  G1mFile.h  G1tFile.cpp  G1tFile.h  KtidFile.cpp  KtidFile.h  Makefile  MtlFile.cpp  MtlFile.h  Utils.cpp  Utils.h  debug.cpp  g1t_converter.cpp  ktid_converter.cpp  main.cpp  reset.bat  reset_local.bat
src/g1ms/: 22bd644e.g1m
src/math/: Vector.h
src/tmp/8279b3ed/: 1.dds  10.dds  100.dds  103.dds  108.dds  11.dds  111.dds  12.dds  122.dds  124.dds  127.dds  130.dds  131.dds  135.dds  138.dds  145.dds  146.dds  148.dds  152.dds  156.dds  158.dds  16.dds  161.dds  18.dds  2.dds  34.dds  37.dds  4.dds  42.dds  48.dds  50.dds  53.dds  56.dds  58.dds  61.dds  66.dds  81.dds  85.dds  92.dds  93.dds  (+2 more)
src_c/: 0d9e12e2.json  compile_main.bat  main.c
zlib-win-build-1.3.1-p1/build-VS2010-MT/_props/: libz-static.props  vs_common.props
zlib-win-build-1.3.1-p1/build-VS2010-MT/libz-static/: libz-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010-MT/tests/minigzip/: minigzip.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010/_props/: vs_common.props
zlib-win-build-1.3.1-p1/build-VS2010/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010/tests/example/: example.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010/tests/example-static/: example-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010/tests/infcover-static/: infcover-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2010/tests/minigzip-static/: minigzip-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013-MT/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013-MT/tests/example/: example.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013-MT/tests/minigzip/: minigzip.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013/libz-static/: libz-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013/tests/example-static/: example-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013/tests/infcover-static/: infcover-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2013/tests/minigzip-static/: minigzip-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015-MT/libz-static/: libz-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015-MT/tests/example/: example.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015-MT/tests/example-static/: example-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015-MT/tests/infcover-static/: infcover-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015-MT/tests/minigzip-static/: minigzip-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2015/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2017-MT/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2017/libz-static/: libz-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2019-MT/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2019-arm/: zlib.sln
zlib-win-build-1.3.1-p1/build-VS2019-arm/libz/: libz.vcxproj
zlib-win-build-1.3.1-p1/build-VS2019-arm/libz-static/: libz-static.vcxproj
zlib-win-build-1.3.1-p1/build-VS2019/libz-static/: libz-static.vcxproj
(+58 files in other folders)
