[package]
name = "Dds_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
image = "0.24"
ddsfile = "0.5.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "png_to_dds_module"